CORE-855: Upgrade to Gradle 6.7.1. (#372)