@@ -1,33 +1,36 @@
-import static org.gradle.api.JavaVersion.*
+import static org.gradle.api.JavaVersion.VERSION_1_8
+import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
 
 plugins {
     id 'org.jetbrains.kotlin.jvm' apply false
     id 'com.gradle.plugin-publish' apply false
     id 'com.jfrog.artifactory' apply false
     id 'com.jfrog.bintray' apply false
-    id 'com.gradle.build-scan'
 }
 
 ext {
     vcsUrl = 'https://github.com/corda/corda-gradle-plugins'
 }
 
-allprojects {
+subprojects {
+    apply plugin: 'java-library'
     apply plugin: 'idea'
 
     version gradle_plugins_version
     group 'net.corda.plugins'
 
+    java {
+        toolchain {
+            languageVersion = of(8)
+        }
+    }
+
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
-        sourceCompatibility = VERSION_1_8
-        targetCompatibility = VERSION_1_8
     }
 
     tasks.withType(GroovyCompile).configureEach {
         options.encoding = 'UTF-8'
-        sourceCompatibility = VERSION_1_8
-        targetCompatibility = VERSION_1_8
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
@@ -35,7 +38,8 @@ allprojects {
             // When writing Gradle plugins in Kotlin, we need to restrict
             // ourselves to the same Kotlin API that Gradle itself uses.
             // Gradle 4.10.x uses Kotlin 1.2.
-            // Gradle 5.x uses Kotlin 1.3.
+            // Gradle 5.x - 6.7.1 uses Kotlin 1.3.
+            // Gradle 6.8 uses Kotlin 1.4
             jvmTarget = VERSION_1_8
             apiVersion = '1.3'
             languageVersion = '1.3'
@@ -53,22 +57,15 @@ allprojects {
         // We need the tests to share this module cache to prevent the
         // Gradle Test-Kit from downloading its own copy of Kotlin etc.
         systemProperty 'test.gradle.user.home', project.gradle.gradleUserHomeDir
-
-        // Resolve warnings about "illegal reflective access" that
-        // are generated by Gradle's own Groovy library.
-        if (current().java9Compatible) {
-            jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                    '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-                    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-                    '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
-                    '--illegal-access=warn'
-        }
     }
 
-    tasks.withType(ValidateTaskProperties).configureEach {
+    tasks.withType(ValidatePlugins).configureEach {
         // Ask Gradle to tell us how to annotate tasks correctly.
         enableStricterValidation = true
+    }
+
+    tasks.withType(GenerateModuleMetadata).configureEach {
+        enabled = false
     }
 
     idea {
@@ -85,7 +82,7 @@ allprojects {
 def publishProjects = project.childProjects.values()
 
 configure(publishProjects) { Project subproject ->
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'maven-publish'
     apply plugin: 'com.jfrog.bintray'
     apply plugin: 'com.jfrog.artifactory'
@@ -205,11 +202,11 @@ configure(publishProjects) { Project subproject ->
 
 artifactory {
     publish {
-        contextUrl = 'https://software.r3.com/artifactory'
+        contextUrl = artifactory_contextUrl
         repository {
             repoKey = 'corda-dev'
-            username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
-            password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
+            username = project.findProperty('cordaArtifactoryUsername') ?: System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
+            password = project.findProperty('cordaArtifactoryPassword') ?: System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
         }
 
         defaults {
@@ -225,13 +222,6 @@ artifactory {
 }
 
 wrapper {
-    gradleVersion = '5.6.4'
+    gradleVersion = '6.7.1'
     distributionType = Wrapper.DistributionType.ALL
-}
-
-gradleEnterprise {
-    buildScan {
-        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-        termsOfServiceAgree = 'yes'
-    }
 }
